--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div id="box" class="box">
               <div id="cross" class="cross"></div>
-              <iframe id="i1"  title="Music embed" class="w-full rounded" scrolling="no" src="https://open.spotify.com/embed/track/2HH6o83hM4ZFVEq6TQTVGk" data-testid="spotify-preview--iframe" height="80"></iframe>
+              <iframe id="i1"  title="Music embed" class="w-full rounded" scrolling="no" src="https://open.spotify.com/embed/track/2HH6o83hM4ZFVEq6TQTVGk" data-testid="spotify-preview--iframe" height=""></iframe>
               <iframe id="i2" title="Music embed" class="w-full rounded" scrolling="no" src="https://open.spotify.com/embed/album/0HQSjiQYmc1s0k9P9JUV53" data-testid="spotify-preview--iframe" height="392"></iframe>
             
             </div> 
